--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "less-loader": "^7.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "wangeditor": "^4.6.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
