--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-component": "^1.1.1",
     "less": "^4.1.1",
+    "svg-sprite-loader": "^5.2.1",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
